--- a/app/Resources/views/list.html.twig
+++ b/app/Resources/views/list.html.twig
@@ -1,24 +1,28 @@
-{% extends 'base.html.twig' %} {% block title %}Film Listing{% endblock %} {% block body %}
+{% extends 'base.html.twig' %}
 
-{% for movie in movies %}
-<div style="display: flex">
-    <div class="card" style="width: 20rem;border: 1px black solid">
-        {% if movie.poster %}
-        <img class="card-img-top" src="{{ movie.poster }}" alt="Card image cap">
-        {% else %}
-        <img class="card-img-top" src="http://placehold.it/100x50" alt="Card image cap">
-        {% endif %}
-        <div class="card-block">
-            <h4 class="card-title">{{ movie.title }}</h4>
-            <p class="card-text">{{ movie.director }}</p>
-            <p class="card-text">{{ movie.category }}</p>
-        </div>
+{% block title %}Film Listing{% endblock %}
 
-        <div class="card-block">
-            <a href="{{ movie.poster }}" class="card-link">{{ movie.title }}</a>
-        </div>
-    </div>
+
+{% block body %}
+
+<div class="ui container grid">
+	{% for movie in movies %}
+	<div class="three wide column">
+		<div class="ui card">
+				<img class="ui centered tiny image" src="{{ movie.poster }}" alt="{{ movie.title }}">
+			<div class="content">
+				<div class="meta">
+					<span class="title"><strong>{{ movie.title }}</strong></span><br><br>
+					<span class="description">{{ movie.director }}</span>
+					<span class="description">{{ movie.category }}</span>
+				</div>
+			</div>
+			<div class="extra content">
+				<a class="right floated" href="{{ movie.poster }}">{{ movie.title }}</a>
+			</div>
+		</div>
+	</div>
+	{% endfor %}
 </div>
-{% endfor %}
 
 {% endblock %}
