--- a/app/Resources/views/list.html.twig
+++ b/app/Resources/views/list.html.twig
@@ -1,17 +1,18 @@
 {% extends 'base.html.twig' %} {% block title %}Film Listing{% endblock %} {% block body %}
 <table class="table table-striped">
     <th>Title</th>
-    <th>Summary</th>
+
     <th>Director</th>
     <th>Category</th>
-    <!--<th>Release Date</th>
-    <th>Poster</th>-->
+
     {% for movie in movies %}
     <tr>
-        <td>{{ movie.title }}</td>
-        <td>{{ movie.summary }}</td>
+
+        <td><a href="/movie_edit/{{ movie.id }}">{{ movie.title }}</a></td> 
+
         <td>{{ movie.director }}</td>
         <td>{{ movie.category }}</td>
+        <td><button><a href="/movie_delete/{{ movie.id }}"/>delete</span></button></td>
     </tr>
     {% endfor %}
 </table>{% endblock %}
