--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,5 +11,6 @@
 <body>
     {% block body %}{% endblock %}
     {% block javascripts %}{% endblock %}
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.js"></script>
 </body>
 </html>
