--- a/app/Resources/views/security/base.html.twig
+++ b/app/Resources/views/security/base.html.twig
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}Welcome!{% endblock %}</title>
-
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.css">
-    {% block stylesheets %}
-    {% endblock %}
+	<meta charset="UTF-8" />
+	<title>{% block title %}Welcome!{% endblock %}</title>
+	<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.css">
+	{% block stylesheets %}
+	{% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
-    {% block javascripts %}{% endblock %}
-
-   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	{% block body %}{% endblock %}
+	{% block javascripts %}{% endblock %}
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.js"></script>
 </body>
 </html>
