--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -9,33 +9,34 @@
 {% endif %}
 {% block body %}
 <form id="formlogin" action="{{ path('login') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+	<label for="username">Username:</label>
+	<input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+	<label for="password">Password:</label>
+	<input type="password" id="password" name="_password" />
 
-    {#
-    If you want to control the URL the user
-    is redirected to on success (more details below)
-    #}
+	{#
+	If you want to control the URL the user
+	is redirected to on success (more details below)
+	#}
 
-    <input type='hidden' name='_target_path' value='/admin' />
-    
-    <button type="submit">login</button>
+	<!-- <input type='hidden' name='_target_path' value='/movies' /> -->
+
+	<button type="submit">login</button>
 </form>
-{% endblock %}
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.js" integrity="sha256-tA8y0XqiwnpwmOIl3SGAcFl2RvxHjA8qp0+1uCGmRmg=" crossorigin="anonymous"></script>
 
-{% endblock %}
-
-
-<!-- 
 <script>
-$("#formlogin").submit
-if (username===ryan){
-    $("#formlogin").append("<input type='hidden' name='_target_path' value='/movies' />");
-}
-else if (username===admin){
-     $("#formlogin").append("<input type='hidden' name='_target_path' value='/admin' />");
-}
-    </script> -->
+	$("#formlogin").submit(function(){
+		if (username.value=='ryan'){
+			$("#formlogin").append("<input type='hidden' name='_target_path' value='/movies' />");
+		}
+		else if (username.value=='admin'){
+			$("#formlogin").append("<input type='hidden' name='_target_path' value='/admin' />");
+		}
+	})
+</script>
+{% endblock %}
+
+{% endblock %}
+
