ajout déco reco admin

--- a/app/Resources/views/admin/list.html.twig
+++ b/app/Resources/views/admin/list.html.twig
@@ -43,11 +43,16 @@
 			}
 		})
 	})
+	$('#deco').on('click', function(){
+		console.log('coucou')
+		document.location.href = '/login';
+	})
 </script>
 {% endblock %}
 
 {% block body %}
 
+<button class="ui red button" id="deco" href="/login">Deconnexion</button>
 
 <div class="ui container cards">
 	{% for movie in movies %}
